--- a/about.html
+++ b/about.html
@@ -21,7 +21,11 @@ img:hover {
     <tr style="background-color: rgb(221, 141, 21);">
      
         <th colspan="5" style="font-size: 67px;"> Ralph's GameStore </th>
-        <h1><a href="ralph3.html">Accessories</a> <br><a href="ralph2.html">Devices</a></h1>
+        <h1>
+  <a href="ralph3.html">Accessories</a><br>
+  <a href="about.html">Devices</a>
+</h1>
+
     </tr>   
     <tr>
       <td>
@@ -59,4 +63,5 @@ img:hover {
 
 
 </body>
+
 </html>
